--- a/index.html
+++ b/index.html
@@ -1,193 +1,150 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-<div id="menu">
-<li><a href="#about">About Me</a></li>
-<li><a href="#photos">My Photos</a></li>
-<li><a href="#playlist">My Playlist</a></li>
-<li><a href="#like">Like</a></li>
-<li><a href="#qrcoder">QR code</a></li>
-<li><a href="#spa">Q&A</a></li>
-<li><a href="#contact">Contact Me</a></li>
-</div>
-		  
-<section id="about" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-about me
-<br/>
-<br/>
-<br/>
-</section>
 
-<section id="photos" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-my photos
-<br/>
-<br/>
-<br/>
-</section>
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0" nonce="ubr5sMci"></script>
 
-<section id="playlist" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-my playlist
-<br/>
-<br/>
-<br/>
-</section>
+  <div id="menu">
+    <div class="logo">
+      <img src="resources/logo.png"></img>
+      <span>ConnecTree</span>
+    </div>
+    <span class="menuitem"><a href="#about">About Me</a></span>
+    <span class="menuitem"><a href="#photos">My Photos</a></span>
+    <span class="menuitem"><a href="#playlist">My Playlist</a></span>
+    <span class="menuitem"><a href="#like">Like</a></span>
+    <span class="menuitem"><a href="#qrcoder">QR code</a></span>
+    <span class="menuitem"><a href="#spa">Q & A</a></span>
+    <span class="menuitem"><a href="#contact">Contact Me</a></span>
+  </div>
+        
+  <section id="about" class="section">
+    <h1>About Me</h1>
+    <p>
+      Garry (Gabriel) Chertkow is my grandfather. He was born in Ukraine in 1924 but grew up in Uruguay, south America, his whole life.
+      Garry is very active, likes sports and extreme sports, collecting postage stamps and coins and loving his wife, my grandmother. He is a handyman and used to own his own plastic and metal workshop back in Uruguay.
+      When my father was 13, the family moved to Israel where my grandfather worked in IAI and gained a reputation as an expert of his field.
+    </p>
+  </section>
 
-<section id="like" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-give me a like
-<br/>
-<br/>
-<br/>
-</section>
+  <section id="photos" class="section">
+    <h1>Photos</h1>
+    <div>
+      <img src="resources/grandpaAndGrandma.PNG"/>
+      <img src="resources/grandpaWedding.PNG"/>
+      <img src="resources/grandpaBeach.PNG"/>
+    </div>
+  </section>
 
-<section id="qrcoder" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-scan my code
-<br/>
-<br/>
-<br/>
-</section>
+  <section id="playlist" class="section">
+    <h1>My Playlist</h1>
+    <div>
+      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/SJ1aTPM-dyE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  </section>
 
-<section id="spa" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-ans
-<br/>
-<br/>
-<br/>
-</section>
+  <section id="like" class="section">
+    <h1>Like & Share</h1>
+    <div class="fb-like" data-href="https://web-development-environments-2021.github.io/assignment1-yairch/" data-width="" data-layout="standard" data-action="like" data-size="large" data-share="true"></div>
+  </section>
 
-<section id="contact" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-contact me
-<br/>
-<br/>
-<br/>
-</section>
+  <section id="qrcoder" class="section">
+    <h1>Scan My Code</h1>
+    <img src="resources/qrcode.png"/>
+  </section>
+
+  <section id="spa" class="section">
+    <h1>Q & A</h1>
+    <ol>
+      <li>
+        <div>
+          <b>Three Main Differences between Web1, Web2, and Web3:</b><br>
+          <table>
+            <tbody>
+              <tr>
+                <td>Web1</td>
+                <td>Web2</td>
+                <td>Web3</td>
+              </tr>
+              <tr>
+                <td>
+                  Companies publish content that people consume (e.g. CNN)
+                </td>
+                <td>
+                  People publish content that other people can consume, companies build platforms that let people publish content for other people (e.g. Flickr, YouTube, Adsense, Wikipedia, Blogger, MySpace, RSS, Digg)
+                </td>
+                <td>
+                  People build applications that people can interact with, companies build platforms that let people publish services by leveraging the associations between people or special content ( e. g. Face Book, Google Maps, My Yahoo!)
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  In Web 1.0 search engines retrieve macro contents. Search is very fast but many times results are inaccurate or more than users can chew.
+                </td>
+                <td>
+                  In Web 2.0 search engines retrieve tags with micro contents (Furl even retrieves tags with macro contents). The process of tagging is manual, tedious and covers negligible percents of the WWW. Web 2.0 tags everything: pictures, links, events, news, Blogs, audio, video, and so on. Google Base even retrieves micro content texts.
+                </td>
+                <td>
+                  In Web 3.0 search engines will hopefully retrieve micro content texts which were tagged automatically. This implies translating billions of Web 1.0 macro contents into micro contents. The result could be more precise search because tagging can solve part of the ambiguity that homonyms and synonyms introduce into the process of Search.
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Web 1.0 was all about static content, one way publishing of content without any real interaction between readers or publishers or each other.
+                </td>
+                <td>
+                  Web 2.0 is more about 2 way communication through social networking, blogging, wikis, tagging, user generated content and video.
+                </td>
+                <td>
+                  Web 3.0 is curiously undefined. AI and the web learning what you want and delivering you a Personalized web experience.
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </li>
+      <li>
+        <p>
+          An example of the differences between the web versions is search of the following query - "medicine side effects".
+          With web1, results will be of big established pharmaceutics companies only and could be inaccurate or too expansive. Information will be presented in static format. Web2 results will be far more accurate thanks to tagging, and the sources can be derived from small, individual contributers. Everyone could upload their knowledge and experience of medicine side effects to blogs, Wikipedia or YouTube. Web3 results will be the most accurate and based on computer AI. Fast and personalized results of medicine based on user-data, related subjects and intelligent machine learning algorithms.
+        </p>
+      </li>
+    </ol>
+  </section>
+
+  <section id="contact" class="section">
+    <h1>Contact Me</h1>
+    <form method="POST" action="mailto:yairch@post.bgu.ac.il">
+      <p>
+        Your email:
+        <input name="sender" type="text">
+      </p>
+      <p>
+        Feedback:
+        <textarea name="feedback" rows="10" cols="20"></textarea>
+      </p>
+      <input type="submit" value="Send">
+      <input type="reset" value="Clear Form">
+    </form>
+  </section>
 
 
-<script type="text/javascript">
-$(function(){
-  $("#nav a").click(function(e){
-    e.preventDefault();
-    $('html,body').scrollTo(this.hash,this.hash); 
-  });
-});
-</script>
-<script type="text/javascript">
- $(document).scroll(function() {
-    $('#menu').toggle($(this).scrollTop()>1000)
- });​
- </script>
+  <script type="text/javascript">
+    $(function(){
+      $("#nav a").click(function(e){
+        e.preventDefault();
+        $('html,body').scrollTo(this.hash,this.hash); 
+      });
+    });
+    </script>
+    <script type="text/javascript">
+    $(document).scroll(function() {
+        $('#menu').toggle($(this).scrollTop()>1000)
+    });​
+  </script>
 </body>
 </html>
