--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <section id="playlist" class="section">
     <h1>My Playlist</h1>
     <div>
-      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/SJ1aTPM-dyE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/SJ1aTPM-dyE?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   </section>
 
@@ -64,12 +64,14 @@
         <div>
           <b>Three Main Differences between Web1, Web2, and Web3:</b><br>
           <table>
-            <tbody>
+            <thead>
               <tr>
                 <td>Web1</td>
                 <td>Web2</td>
                 <td>Web3</td>
               </tr>
+            </thead>
+            <tbody>
               <tr>
                 <td>
                   Companies publish content that people consume (e.g. CNN)
