--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <section id="playlist" class="section">
     <h1>My Playlist</h1>
     <div>
-      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/SJ1aTPM-dyE?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/SJ1aTPM-dyE?autoplay=1&mute=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   </section>
 
@@ -129,8 +129,10 @@
         Feedback:
         <textarea name="feedback" rows="10" cols="20"></textarea>
       </p>
-      <input type="submit" value="Send">
-      <input type="reset" value="Clear Form">
+      <div class="btn-parent">
+        <input class="btn send" type="submit" value="Send">
+        <input class="btn clear-form" type="reset" value="Clear Form">
+      </div>
     </form>
   </section>
 
