--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   <section id="about" class="section">
     <h1>About Me</h1>
     <p>
-      Garry (Gabriel) Chertkow is my grandfather. He was born in Ukraine in 1924 but grew up in Uruguay, south America, his whole life.
-      Garry is very active, likes sports and extreme sports, collecting postage stamps and coins and loving his wife, my grandmother. He is a handyman and used to own his own plastic and metal workshop back in Uruguay.
-      When my father was 13, the family moved to Israel where my grandfather worked in IAI and gained a reputation as an expert of his field.
+      Garri (Gabriel) Chertkow is my grandfather. He was born in Odessa, Ukraine in 1924 but grew up in Argentina and later in Uruguay, south America, his whole life.
+      Garri is very active, likes sports and extreme sports, collecting postage stamps and coins and loving his wife, my grandmother. He is a handyman and used to own his own plastic and metal workshop back in Uruguay.
+      When my father was 11, the family moved to Israel where my grandfather worked in IAI and gained a reputation as an expert of his field.
     </p>
   </section>
 
