fixed like button

--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
 </head>
 <body>
 
-  <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0" nonce="ubr5sMci"></script>
-
   <div id="menu">
     <div class="logo">
       <img src="resources/logo.png"></img>
@@ -49,7 +46,7 @@
 
   <section id="like" class="section">
     <h1>Like & Share</h1>
-    <div class="fb-like" data-href="https://www.facebook.com/bgu.uni" data-width="" data-layout="standard" data-action="like" data-size="large" data-share="true"></div>
+    <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fweb-development-environments-2021.github.io%2F206085532%2F&width=450&layout=standard&action=like&size=large&share=true&height=35&appId" width="450" height="35" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
   </section>
 
   <section id="qrcoder" class="section">
