fixed anchors from menu

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
       <img src="resources/logo.png"></img>
       <span>ConnecTree</span>
     </div>
-    <span class="menuitem"><a href="#about">About Me</a></span>
-    <span class="menuitem"><a href="#photos">My Photos</a></span>
-    <span class="menuitem"><a href="#playlist">My Playlist</a></span>
-    <span class="menuitem"><a href="#like">Like</a></span>
-    <span class="menuitem"><a href="#qrcoder">QR code</a></span>
-    <span class="menuitem"><a href="#spa">Q & A</a></span>
-    <span class="menuitem"><a href="#contact">Contact Me</a></span>
+    <span class="menuitem"><a href="#_about">About Me</a></span>
+    <span class="menuitem"><a href="#_photos">My Photos</a></span>
+    <span class="menuitem"><a href="#_playlist">My Playlist</a></span>
+    <span class="menuitem"><a href="#_like">Like</a></span>
+    <span class="menuitem"><a href="#_qrcoder">QR code</a></span>
+    <span class="menuitem"><a href="#_spa">Q & A</a></span>
+    <span class="menuitem"><a href="#_contact">Contact Me</a></span>
   </div>
         
   <section id="about" class="section">
-    <h1>About Me</h1>
+    <h1><span id="_about"></span>About Me</h1>
     <p>
       Garri (Gabriel) Chertkow is my grandfather. He was born in Odessa, Ukraine in 1924 but grew up in Argentina and later in Uruguay, south America, his whole life.
       Garri is very active, likes sports and extreme sports, collecting postage stamps and coins and loving his wife, my grandmother. He is a handyman and used to own his own plastic and metal workshop back in Uruguay.
@@ -29,7 +29,7 @@
   </section>
 
   <section id="photos" class="section">
-    <h1>Photos</h1>
+    <h1><span id="_photos"></span>Photos</h1>
     <div>
       <img src="resources/grandpaAndGrandma.PNG"/>
       <img src="resources/grandpaWedding.PNG"/>
@@ -38,24 +38,24 @@
   </section>
 
   <section id="playlist" class="section">
-    <h1>My Playlist</h1>
+    <h1><span id="_playlist"></span>My Playlist</h1>
     <div>
       <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/SJ1aTPM-dyE?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   </section>
 
   <section id="like" class="section">
-    <h1>Like & Share</h1>
+    <h1><span id="_like"></span>Like & Share</h1>
     <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fweb-development-environments-2021.github.io%2F206085532%2F&width=450&layout=standard&action=like&size=large&share=true&height=35&appId" width="450" height="35" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
   </section>
 
   <section id="qrcoder" class="section">
-    <h1>Scan My Code</h1>
+    <h1><span id="_qrcoder"></span>Scan My Code</h1>
     <img src="resources/qrcode.png"/>
   </section>
 
   <section id="spa" class="section">
-    <h1>Q & A</h1>
+    <h1><span id="_spa"></span>Q & A</h1>
     <ol>
       <li>
         <div>
@@ -116,7 +116,7 @@
   </section>
 
   <section id="contact" class="section">
-    <h1>Contact Me</h1>
+    <h1><span id="_contact"></span>Contact Me</h1>
     <form method="POST" action="mailto:yairch@post.bgu.ac.il" enctype="text/plain">
       <p>
         Your email:
