--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <li>
         <p>
           An example of the differences between the web versions is search of the following query - "medicine side effects".
-          With web1, results will be of big established pharmaceutics companies only and could be inaccurate or too expansive. Information will be presented in static format. Web2 results will be far more accurate thanks to tagging, and the sources can be derived from small, individual contributers. Everyone could upload their knowledge and experience of medicine side effects to blogs, Wikipedia or YouTube. Web3 results will be the most accurate and based on computer AI. Fast and personalized results of medicine based on user-data, related subjects and intelligent machine learning algorithms.
+          With web1, results will be of big established pharmaceutics companies only and could be inaccurate or too broad. Information will be presented in static format. Web2 results will be far more accurate thanks to tagging, and the sources can be derived from small, individual contributers. Everyone could upload their knowledge and experience of medicine side effects to blogs, Wikipedia or YouTube. Web3 results will be the most accurate and based on computer AI. Fast and personalized results of medicine based on user-data, related subjects and intelligent machine learning algorithms.
         </p>
       </li>
     </ol>
@@ -201,9 +201,9 @@
     );
 
     emojiPicker.style.position = "absolute";
-    emojiPicker.style.right = "2px";
+    emojiPicker.style.left = "1%";
     emojiPicker.style.outline = "none";
-    emojiPicker.style.top = "20px";
+    emojiPicker.style.top = "8%";
     emojiPicker.style.zIndex = "999";
     emojiPicker.style.display = "none";
     emojiPicker.style.width = "264px";
@@ -220,7 +220,7 @@
     const emojiTrigger = document.createElement("a");
     emojiTrigger.style.position = "absolute";
     emojiTrigger.style.top = "1%";
-    emojiTrigger.style.right = "1%";
+    emojiTrigger.style.left = "1%";
     emojiTrigger.style.textDecoration = "none";
     emojiTrigger.setAttribute("href", "javascript:void(0)");
     emojiTrigger.innerHTML =
